# ProjetoIntegrador4Semestre

./: .gitignore  README.md
Back-End/: README.md  database.py  main.py  models.py  pyproject.toml  schemas.py
Back-End/tests/: test_solicitacoes.py
Front-End/: README.md  index.html  script.js  style.css
