[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.13.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
